# rish-mcp-server

./: .gitignore  LICENSE  README.md  claude_config.json  install.sh  package.json  pyproject.toml  quick_test.py  requirements.txt  setup.py
.github/workflows/: build.yml
docs/: configuration.md  tools.md
src/: __init__.py  server.py  server_bridge.py  server_direct.py
tests/: test_server.py
